@@ -1,5 +1,5 @@
 # This file is autogenerated. DO NOT EDIT!
-# 
+#
 # Modifications should be made to debian/control.in instead.
 # This file is regenerated automatically in the clean target.
 Source: gnome-initial-setup
@@ -48,6 +48,7 @@ Depends: ${shlibs:Depends},
          policykit-1 (>= 0.103),
          adduser,
          gnome-settings-daemon (>= 3.24),
+         ${logo:Depends},
          ${misc:Depends}
 Recommends: gnome-getting-started-docs
 Suggests: gdm3
