@@ -3,6 +3,7 @@ gnome-initial-setup (3.28.0-1) UNRELEASED; urgency=medium
   * New upstream release
   * Cherry-pick use-Debian-icon-on-Debian.patch:
     - Use the Debian logo instead of GNOME logo on the Welcome screen
+  * Depend on desktop-base on Debian for that feature
 
  -- Jeremy Bicha <jbicha@debian.org>  Tue, 20 Mar 2018 13:13:45 -0400
 
